Bug 1342315 - Don't inadvertently ignore font feature settings when creating a new CTFont. r=jrmuizel, a=lizzard

--HG--
extra : source : b623e256e1f4eb394f0f1d666e1c4a517e1f3e53